--- a/Tenta/Tenta/app/partials/UpdateGenre.html
+++ b/Tenta/Tenta/app/partials/UpdateGenre.html
@@ -1,7 +1,7 @@
 ﻿<h1>Update</h1>
-
-<input ng-model="genre.Genreid" />
+<input ng-model="genre.GenreId" />
 <input ng-model="genre.Name">
-<button data-ng-click="updateGenre(Genreid)">
+
+<button data-ng-click="updateGenre(GenreId)">
     Save
 </button>
